# Parallax

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  parallax
data/catalogs/: catalog_loader.cpp  star_entry.hpp
docs/architecture/: atmosphere_model.md  catalog_system.md  overview.md  rendering_pipeline.md
docs/sprints/: sprint_01.md  sprint_02.md
shaders/: compile_shaders.bat  compile_shaders.sh  starfield.frag  starfield.vert  test_star.frag  test_star.vert
src/: CMakeLists.txt  clang-format.txt  main.cpp
src/astro/: coordinates.cpp  coordinates.hpp  time_system.cpp  time_system.hpp
src/catalog/: bright_stars.csv  catalog_loader.hpp
src/core/: application.cpp  application.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp  types.hpp  window.cpp  window.hpp
src/core/math/: coordinates.cpp  coordinates.hpp  vec3.cpp  vec3.hpp
src/discovery/: discovery_engine.cpp  discovery_engine.hpp
src/observatory/: atmosphere.cpp  atmosphere.hpp  observer.cpp  observer.hpp  telescope.cpp  telescope.hpp
src/rendering/: camera.cpp  camera.hpp  renderer.cpp  renderer.hpp  star_field.cpp  star_field.hpp  starfield.cpp  starfield.hpp
src/universe/: procedural_generator.cpp  procedural_generator.hpp  star.cpp  star.hpp  star_catalog.cpp  star_catalog.hpp
src/vulkan/: context.cpp  context.hpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp
tests/: CMakeLists.txt  test_atmosphere.cpp  test_catalog.cpp  test_catalog_loader.cpp  test_coordinates.cpp  test_discovery.cpp  test_main.cpp  test_main.hpp  test_procedural.cpp  test_telescope.cpp  test_time_system.cpp
